--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,6 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>7.3.0</version>
-			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -149,5 +148,20 @@
 			<version>1.4.10-java7</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+                <fork>true</fork>
+                <executable>C:\Program Files\Java\jdk1.8.0_281\bin\javac.exe</executable>
+            </configuration>
+			</plugin>
+						
+		</plugins>
+	</build>
 
 </project>
