--- a/pom.xml
+++ b/pom.xml
@@ -156,11 +156,23 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
 				<configuration>
-                <fork>true</fork>
-                <executable>C:\Program Files\Java\jdk1.8.0_281\bin\javac.exe</executable>
-            </configuration>
+					<fork>true</fork>
+					<executable>C:\Program Files\Java\jdk1.8.0_281\bin\javac.exe</executable>
+				</configuration>
 			</plugin>
-						
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>TestNG.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+
+
 		</plugins>
 	</build>
 
