--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
 				<version>3.10.1</version>
 				<configuration>
 					<fork>true</fork>
-					<executable>C:\Program Files\Java\jdk1.8.0_281\bin\javac.exe</executable>
+					<executable>C:\Program Files\Java\jdk-11.0.16\bin\javac.exe</executable>
 				</configuration>
 			</plugin>
 
